# 5c

./: CMakeLists.txt  main.c
compare/: compare.c  compare.h
generatingFunc/: generatingFunc.c  generatingFunc.h
sortFunc/: sortFunc.c  sortFunc.h
swap/: swap.c  swap.h
test/: test.c  test.h
